Tutorial-2/Function/Functions-II
>>> #here we will defining the argument values in the python functions, that are in the 3 forms
>>> #1 default argument values
>>> #2 keyword argument
>>> #3 special parameters
>>>
>>> #1 this form is to specify a default value for one or more arguments and it creates a function that can be called with the fewer arguments,
>>> def ask_ok(prompt, retries=4, reminder='Please try again!'):
...     while True:
...         reply = input(prompt)
...         if reply in {'y', 'ye', 'yes'}:
...             return True
...         if reply in {'n', 'no', 'nop', 'nope'}:
...             return False
...         retries = retries - 1
...         if retries < 0:
...             raise ValueError('invalid user response')
...         print(reminder)
>>> ask_ok('Do you need to write sample test one more')
Do you need to write sample test one morek
Please try again!
Do you need to write sample test one morel
Please try again!
Do you need to write sample test one morem
Please try again!
Do you need to write sample test one moreyes
True


>>> #2 In this form function can also be called using keyword arguments for the  function(keyword=argumnet)
>>> def car_robot(name, speed='5 km/hr', destination='coffee shop'):
...     print('The Agent', name, 'Reach the', destination, 'by', speed, 'speed')
...
>>> #you can call the function and pass the argument by using the keyword like this,
>>> car_robot('finn')
The Agent finn Reach the coffee shop by 5 km/hr speed
>>> car_robot('finn', destination='park')
The Agent finn Reach the park by 5 km/hr speed
>>> car_robot('finn', destination='park', speed='4 km/hr')
The Agent finn Reach the park by 4 km/hr speed

>>> # the above method will be invalid if you use the following commands
>>> car_robot()#argument missing
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: car_robot() missing 1 required positional argument: 'name'
>>> car_robot('finn',name='finn')#duplicate argument with same parameter keyword name
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: car_robot() got multiple values for argument 'name'
>>> car_robot(name='finn', '4 km/hr')#non-keyword argument followed by the keyword agrumnet
  File "<stdin>", line 1
    car_robot(name='finn', '4 km/hr')#non-keyword argument followed by the keyword agrumnet
                                    ^
SyntaxError: positional argument follows keyword argument


 #3 i) this is a special arguments pass to function. first (**keywordarguments) in this type of argument, it recives a dictionary containing keyword argumnets, and accepts for those corresponding to a parameter name.
>>> # ii) second (*arguments) in this type of argument, it recives a tuple containing postional arguments beyond the parameter list.
>>> # and the important syntax for declear this you must place it correctly it must be looks like this,
>>> #def fun(*arguments, **keywordarguments) the (*) should appear before (**), let's see the example for this
>>> def shop(name,*arguments,**keywordarguments):
...     print("Hai",name,"sir!")
...     print("How can I help You",name)
...     for argument in arguments:
...         print(argument)
...     print("*"*30)
...     for key in keywordarguments:
...         print(key,":",keywordarguments[key])
...
>>> shop("burg",
...      "I need a cup of coffee",
...      "which one is good",
...      "how much the suit cost?",
...      cookies="5 packets",
...      chicken="4 Kg")
Hai burg sir!
How can I help You burg
I need a cup of coffee
which one is good
how much the suit cost?
******************************
cookies : 5 packets
chicken : 4 Kg
#let get into more clear explaination about what are these special arguments
